--- a/Example/CKLNetwork.xcodeproj/xcshareddata/xcschemes/CKLNetworkLibrary-Example.xcscheme
+++ b/Example/CKLNetwork.xcodeproj/xcshareddata/xcschemes/CKLNetworkLibrary-Example.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "1160"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "CKLNetworkLibrary_Example.app"
-               BlueprintName = "CKLNetworkLibrary_Example"
-               ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
+               BuildableName = "CKLNetwork_Example.app"
+               BlueprintName = "CKLNetwork_Example"
+               ReferencedContainer = "container:CKLNetwork.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "CKLNetworkLibrary_Tests.xctest"
-               BlueprintName = "CKLNetworkLibrary_Tests"
-               ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
+               BuildableName = "CKLNetwork_Tests.xctest"
+               BlueprintName = "CKLNetwork_Tests"
+               ReferencedContainer = "container:CKLNetwork.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,37 +40,33 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "CKLNetwork_Example.app"
+            BlueprintName = "CKLNetwork_Example"
+            ReferencedContainer = "container:CKLNetwork.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "CKLNetworkLibrary_Tests.xctest"
-               BlueprintName = "CKLNetworkLibrary_Tests"
-               ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
+               BuildableName = "CKLNetwork_Tests.xctest"
+               BlueprintName = "CKLNetwork_Tests"
+               ReferencedContainer = "container:CKLNetwork.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "CKLNetworkLibrary_Example.app"
-            BlueprintName = "CKLNetworkLibrary_Example"
-            ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,13 +78,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "CKLNetworkLibrary_Example.app"
-            BlueprintName = "CKLNetworkLibrary_Example"
-            ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
+            BuildableName = "CKLNetwork_Example.app"
+            BlueprintName = "CKLNetwork_Example"
+            ReferencedContainer = "container:CKLNetwork.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -101,9 +95,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "CKLNetworkLibrary_Example.app"
-            BlueprintName = "CKLNetworkLibrary_Example"
-            ReferencedContainer = "container:CKLNetworkLibrary.xcodeproj">
+            BuildableName = "CKLNetwork_Example.app"
+            BlueprintName = "CKLNetwork_Example"
+            ReferencedContainer = "container:CKLNetwork.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
